--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+html{
+  height: 100%;
+}
+*{
+  color: #fff !important;
+}
+body{
+  background-color:#1f006c ;
+}
